Toby's Spring TV ::: Gradle -> Intellij 기본으로 빌드도구 변경 및 9회 RestTemplate And AsyncRestTemplate
- 다양한 동기, 비동기 방식의 API요청방식을 적용하여 각 상황마다 쓰레드는 얼마나사용되는지 동작시간을 얼마인지에 대해 알아보았다.